test l2 norm along mirrored path

--- a/project_report.tex
+++ b/project_report.tex
@@ -173,5 +173,6 @@ Your observation actually reveals something profound:
 During training: L2 regularization helps by preventing overfitting (keep weights small while learning)
 After training: L2 norm alone tells you nothing about whether a point in weight space will generalize
 
-Why are they claining they found low loss path when its not generalizing as well on test data
+Why are they claining they found low loss path when its not generalizing as well on test data (tbf it's endpoints fault)
 VGG16 (Bezier) 	0.14 	0.24 	6.79 	7.75
+
